--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
         <artifactId>commons-cli</artifactId>
         <version>1.3.1</version>
     </dependency>
+    <dependency>
+        <groupId>me.tongfei</groupId>
+        <artifactId>progressbar</artifactId>
+        <version>0.5.5</version>
+    </dependency>
     
     <!-- For command line option parsing -->
     <dependency>
